# snap4city-mobility-mcp

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  api.py  chainlit_app.py  chat.py  outputs4c,txt  probe-native-tools.json  pyproject.toml  run-jupyterhub.sh  todo.md
docs/: code_walkthrough_zh.md  demo_referente.md  lessons.md  next-phase.md  relazione.tex  snap4city-api-notes.md
docs/diagrams/: component.puml  deployment.puml  graph-flow.puml  sequence.puml
docs/reference/: README.md  Sample tool.py
examples/: README.md  S01-tre-modi.json  S05-senza-citta.json  S06-modo-singolo-piedi.json  S07-modo-singolo-auto.json  S08-modo-singolo-autobus.json  S09-origine-gps.json  S10-citta-nominata.json  S11-follow-up.json  S12-dest-categoria-supermercato.json  S13-dest-categoria-farmacia.json  S14-servizi-percorso-ristoranti.json  S15-servizi-percorso-autobus.json  S16-nearby-farmacie.json  S17-nearby-centro-nominato.json  S18-nearby-parcheggi.json  S19-orario-partenza.json  S20-non-supportato.json  S21-chiarimento.json  near-servizi.json  route-bus.json  route-tre-modi.json
frontend/: README.md  mobility_advisor_dashboard.html
llmagentic/: README.md  main.py  messages.json  prompt.txt
relazione/: README.md  relazione.tex
screenshots/: README.md
scripts/: build-delivery-zip.ps1  build-delivery-zip.sh  probe_geocode.py  probe_parking.py  probe_routing.py  probe_timetable.py  probe_tpl.py  smoke_client.py
src/snap4city_mobility_mcp/: __init__.py  _helpers.py  cli.py  geo.py  gtfs_shapes.py  llm.py  mcp_server.py  mcp_tools.py  orchestrator.py  server.py  token_manager.py  tpl.py
tests/: conftest.py  test_api.py  test_gtfs_shapes.py  test_llm.py  test_mcp_server.py  test_mcp_tools.py  test_orchestrator.py  test_tpl.py
whatif-local/: .gitignore  README.md  docker-compose.yml  fetch-data.sh  run-on-jupyterhub.sh  test-route.sh
whatif-local/patches/: README.md  pt-router-singleton.patch
